# splatfacto-w_reforged

./: Patches.md  export_script.py  pyproject.toml
splatfactow/: nerfw_dataparser.py  splatfactow_field.py  splatfactow_model.py
